[gd_scene load_steps=4 format=2]

[ext_resource path="res://resources/default_theme.tres" type="Theme" id=1]
[ext_resource path="res://scenes/title_screen/VolumeSettings.gd" type="Script" id=2]
[ext_resource path="res://Sounds/MoonRevolving.ogg" type="AudioStream" id=3]

[node name="VolumeSettings" type="VBoxContainer"]
margin_left = 39.53
margin_top = 132.161
margin_right = 210.53
margin_bottom = 205.161
theme = ExtResource( 1 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Music" type="HBoxContainer" parent="."]
margin_right = 171.0
margin_bottom = 22.0

[node name="Label" type="Label" parent="Music"]
margin_right = 58.0
margin_bottom = 22.0
hint_tooltip = "music volume"
theme = ExtResource( 1 )
text = "musica"

[node name="Music" type="HSlider" parent="Music"]
margin_left = 62.0
margin_right = 171.0
margin_bottom = 16.0
hint_tooltip = "music volume"
focus_mode = 0
size_flags_horizontal = 3
max_value = 1.0
step = 0.0

[node name="Sound" type="HBoxContainer" parent="."]
margin_top = 26.0
margin_right = 171.0
margin_bottom = 48.0

[node name="Label" type="Label" parent="Sound"]
margin_right = 49.0
margin_bottom = 22.0
hint_tooltip = "sound effect volume"
text = "sonus"

[node name="Sound" type="HSlider" parent="Sound"]
margin_left = 53.0
margin_right = 171.0
margin_bottom = 16.0
hint_tooltip = "sound effect volume"
focus_mode = 0
size_flags_horizontal = 3
max_value = 1.0
step = 0.0
scrollable = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Mute" type="HBoxContainer" parent="."]
margin_top = 52.0
margin_right = 171.0
margin_bottom = 84.0

[node name="mutus" type="Label" parent="Mute"]
margin_top = 5.0
margin_right = 121.0
margin_bottom = 27.0
hint_tooltip = "Mute all sound"
mouse_filter = 1
size_flags_horizontal = 3
text = "mutus"

[node name="CheckBox" type="CheckBox" parent="Mute"]
margin_left = 125.0
margin_right = 171.0
margin_bottom = 32.0
hint_tooltip = "mute all sound"
flat = true

[node name="SoundCheckTimer" type="Timer" parent="."]
one_shot = true

[node name="SoundVolCheck" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
bus = "Sound Vol"
[connection signal="value_changed" from="Music/Music" to="." method="_on_Music_value_changed"]
[connection signal="value_changed" from="Sound/Sound" to="." method="_on_Sound_value_changed"]
[connection signal="gui_input" from="Mute/mutus" to="." method="_on_mutus_gui_input"]
[connection signal="toggled" from="Mute/CheckBox" to="." method="_on_CheckBox_toggled"]
[connection signal="timeout" from="SoundCheckTimer" to="." method="_on_SoundCheckTimer_timeout"]
